<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".View.MainMenu">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome, "
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        android:orientation="vertical">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/button1_menu"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            style="@style/MenuButtons"
            android:drawableStart="@drawable/rtr_icon"
            android:paddingStart="60dp"
            android:paddingEnd="40dp"
            tools:ignore="VisualLintButtonSize"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/button2_menu"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            style="@style/MenuButtons"
            android:drawableStart="@drawable/graph_icon"
            android:paddingStart="60dp"
            android:paddingEnd="40dp"
            tools:ignore="VisualLintButtonSize"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/button3_menu"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            style="@style/MenuButtons"
            android:drawableStart="@drawable/previous_readings_icon"
            android:paddingStart="60dp"
            android:paddingEnd="40dp"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/button4_menu"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            style="@style/MenuButtons"
            android:drawableStart="@drawable/connection_icon"
            android:paddingStart="60dp"
            android:paddingEnd="40dp"
            tools:ignore="VisualLintButtonSize"/>

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/button5_menu"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            style="@style/MenuButtons"
            android:drawableStart="@drawable/instructions_icon"
            android:paddingStart="60dp"
            android:paddingEnd="40dp"
            tools:ignore="VisualLintButtonSize"/>

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="Log out"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            style="@style/MenuButtons"
            android:drawableStart="@drawable/logout_icon"
            android:paddingStart="60dp"
            android:paddingEnd="40dp"
            tools:ignore="VisualLintButtonSize"/>
    </LinearLayout>


</LinearLayout>